--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,27 @@
 cmake_minimum_required(VERSION 3.2)
 project(c4log)
 
-include(./cmake/c4Project.cmake)
+include(./ext/c4core/cmake/c4Project.cmake)
 
-c4_declare_project(C4LOG)
+c4_declare_project(C4LOG
+    DESC "C++ logging utilities"
+    AUTHOR "Joao Paulo Magalhaes <dev@jpmag.me>"
+    MAJOR 0 MINOR 0 RELEASE 1)
 
-set(C4LOG_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
-set(C4LOG_EXT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/extern)
+set(C4LOG_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
+set(C4LOG_EXT_DIR ${CMAKE_CURRENT_LIST_DIR}/ext)
 
-add_subdirectory(src)
+c4log_require_module(c4core
+    SUBDIRECTORY ${C4LOG_EXT_DIR}/c4core)
+
+c4log_add_library(c4log
+    SOURCE_ROOT ${C4LOG_SRC_DIR}
+    SOURCES
+      c4/log/log.hpp
+      c4/log/log.cpp
+      c4/log/color.hpp
+    LIBS c4core
+    INC_DIRS ${C4LOG_SRC_DIR})
 
 if(C4LOG_BUILD_TESTS)
     enable_testing() # this must be done here (and not inside the test dir)
