--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,10 @@ c4_declare_project(C4LOG
 set(C4LOG_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
 set(C4LOG_EXT_DIR ${CMAKE_CURRENT_LIST_DIR}/ext)
 
-c4log_require_subproject(c4core
+c4_require_subproject(c4core
     SUBDIRECTORY ${C4LOG_EXT_DIR}/c4core)
 
-c4log_add_library(c4log
+c4_add_library(c4log
     SOURCE_ROOT ${C4LOG_SRC_DIR}
     SOURCES
       c4/log/log.hpp
