--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,6 @@ c4_declare_project(c4log
     AUTHOR "Joao Paulo Magalhaes <dev@jpmag.me>"
     MAJOR 0 MINOR 0 RELEASE 1)
 
-set(C4LOG_SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
-set(C4LOG_EXT_DIR ${CMAKE_CURRENT_LIST_DIR}/ext)
-
 c4_require_subproject(c4core
     SUBDIRECTORY ${C4LOG_EXT_DIR}/c4core)
 
@@ -28,12 +25,4 @@ c4_add_library(c4log
 c4_install_target(c4log)
 c4_install_exports()
 
-if(C4LOG_BUILD_TESTS)
-    enable_testing() # this must be done here (and not inside the test dir)
-                     # so that the test targets are available at the top level
-    add_subdirectory(test)
-endif()
-
-if(C4LOG_BUILD_BENCHMARKS)
-    add_subdirectory(bm)
-endif()
+c4_add_dev_targets()
