--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,8 +5,8 @@ function(c4log_add_test name)
         SOURCES ${ARGN} main.cpp
         INC_DIRS ${CMAKE_CURRENT_LIST_DIR}
         LIBS c4log gtest
-        FOLDER c4log-test)
-    c4_add_test(c4log-test-${name} ON)
+        FOLDER test)
+    c4_add_test(c4log-test-${name})
 endfunction(c4log_add_test)
 
 c4log_add_test(basic test.cpp)
