--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -173,12 +173,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {std: 11, cxx: xcode, bt: Debug  , os: macos-11.0}
-          - {std: 11, cxx: xcode, bt: Release, os: macos-11.0}
-          - {std: 14, cxx: xcode, bt: Debug  , os: macos-11.0}
-          - {std: 14, cxx: xcode, bt: Release, os: macos-11.0}
-          - {std: 17, cxx: xcode, bt: Debug  , os: macos-11.0}
-          - {std: 17, cxx: xcode, bt: Release, os: macos-11.0}
+          - {std: 11, cxx: xcode, bt: Debug  , os: macos-11.0, bitlinks: shared64 static64}
+          - {std: 11, cxx: xcode, bt: Release, os: macos-11.0, bitlinks: shared64 static64}
+          - {std: 14, cxx: xcode, bt: Debug  , os: macos-11.0, bitlinks: shared64 static64}
+          - {std: 14, cxx: xcode, bt: Release, os: macos-11.0, bitlinks: shared64 static64}
+          - {std: 17, cxx: xcode, bt: Debug  , os: macos-11.0, bitlinks: shared64 static64}
+          - {std: 17, cxx: xcode, bt: Release, os: macos-11.0, bitlinks: shared64 static64}
     env: {STD: "${{matrix.std}}", CXX_: "${{matrix.cxx}}", BT: "${{matrix.bt}}", BITLINKS: "${{matrix.bitlinks}}", VG: "${{matrix.vg}}", SAN: "${{matrix.san}}", LINT: "${{matrix.lint}}", OS: "${{matrix.os}}"}
     steps:
       - name: checkout
